# ud-public

./: .gitignore  README.md  pyproject.toml
courses/: README.md
courses/2024-I/systems-analysis/project/your_assistant/: README.md  pyproject.toml
courses/2024-I/systems-analysis/project/your_assistant/your_assistant/: text_processing.py
courses/advanced-programming/codes/python/classes_example/: abstract_calculator.py  abtract_calculator.py  log.txt  pyproject.toml
courses/advanced-programming/project/backend_python/condor/: Dockerfile  README.md  pyproject.toml  requirements.txt
courses/advanced-programming/project/backend_python/condor/condor/: main.py
courses/advanced-programming/project/backend_python/condor/condor/repositories/: __init__.py  courses.py
courses/advanced-programming/project/backend_python/condor/src/: main.py
courses/computer-networking/services_example/: main.py  pyproject.toml
courses/data-analysis-programming/practices/1_etl/: docker-compose.yml  pyproject.toml
courses/data-analysis-programming/practices/1_etl/airflow/sql/: create_tables.sql  init_es_db.sql
courses/data-analysis-programming/project/: Dockerfile  pyproject.toml
courses/data-science-introduction/notebooks/: EDA-DataCleaning.ipynb  MachineLearning.ipynb  Matplotlib-Seaborn.ipynb  Numpy-Regex.ipynb  Pandas.ipynb  PythonIntroduction.ipynb  pyproject.toml  requirements.txt
courses/data-science-introduction/notebooks/csv-files/: StudentsInfo.csv
courses/data-science-introduction/notebooks/datasets_kaggle/: manufacturing_defect_dataset.csv
courses/data-science-introduction/notebooks/json-files/: Students.json  StudentsInfo.json  sales_data.json
courses/databases-ii/practices/Mongo-Redis/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
courses/databases-ii/practices/Mongo-Redis/src/: main.py
courses/databases-ii/practices/Mongo-Redis/src/api/: __init__.py  sellers.py
courses/databases-ii/practices/Mongo-Redis/src/models/: __init__.py  product.py  seller.py
courses/databases-ii/practices/Mongo-Redis/src/repositories/: __init__.py  i_db.py  mongo_db.py  redis.py
courses/databases-ii/practices/Mongo-Redis/src/services/: __init__.py  product_services.py  seller_services.py
courses/databases-ii/practices/RelationalDatabases/solution/: .env.example  README.md  pyproject.toml
courses/databases-ii/practices/RelationalDatabases/solution/src/: main.py
courses/machine-learning/challenges/challenge_1/: README.md  breakout_dqn.py  pyproject.toml  requirements-linux.txt
courses/machine-learning/codes/: CliffWalking_Workshop.ipynb  GridWorld_Workshop.ipynb  MachineLearning.ipynb  breakout_dqn.py  pyproject.toml
courses/machine-learning/codes/deep_learning/: ae_anomaly_detection_creditcard.ipynb  cifar10_cnn_edition.ipynb  dcgan_cifar10.ipynb  deep_learning_foundations_examples.ipynb  resnet50_transfer_learning.ipynb  sentiment_classification_lstm_transformer_bert.ipynb
courses/machine-learning/codes/neural_networks/: MLP_TwoMoons_Regularization_Workshop.ipynb
courses/machine-learning/codes/reinforcement_learning/ppo/: README.md  evaluate.py  ppo_agent.py  pyproject.toml  train.py
courses/software-modeling/codes/python/calculator/: calculator_classes.py  cli.py  log.txt  pyproject.toml
courses/software-modeling/project/python_services/: Dockerfile  README.md  pyproject.toml  requirements.txt
courses/software-modeling/project/python_services/backendpython/: environment_variables.py  main.py
courses/software-modeling/project/python_services/backendpython/controllers/: __init__.py  videogames.py
courses/software-modeling/project/python_services/backendpython/repositories/: videogames.py
courses/software-modeling/project/python_services/backendpython/services/: videogames.py
courses/software-modeling/projects/course_project/: Makefile  backend.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
courses/software-modeling/projects/course_project/course_project/: main.py
courses/software-modeling/workshops/workshop_pro/: pyproject.toml
courses/software-modeling/workshops/workshop_pro/tests/test_engines_subsystem/: test_engines.py  test_factories.py
courses/software-modeling/workshops/workshop_pro/workshop_pro/catalog_subsystem/: __init__.py  decorator.py
courses/software-modeling/workshops/workshop_pro/workshop_pro/core_subsystem/: __init__.py  catalog_proxy.py  user_authentication.py  users.json
courses/software-modeling/workshops/workshop_pro/workshop_pro/engines_subsystem/: __init__.py  engines.py  facade.py  factories.py
courses/software-modeling/workshops/workshop_pro/workshop_pro/observability_subsystem/: observability.py
courses/software-modeling/workshops/workshop_pro/workshop_pro/vehicles_subsystem/: engines_flyweight.py  vehicle.py
courses/software_engineering_seminar/project/python_backend/: Dockerfile  main.py  pyproject.toml
courses/software_engineering_seminar/project/python_backend/.github/workflows/: tests.yml
courses/software_engineering_seminar/project/python_backend/features/: calculator.feature
courses/software_engineering_seminar/project/python_backend/features/steps/: calculator_steps.py
courses/software_engineering_seminar/project/python_backend/src/: __init__.py
courses/software_engineering_seminar/project/python_backend/src/application/: __init__.py  calculator.py
courses/software_engineering_seminar/project/python_backend/src/models/: __init__.py  input_aritmetics.py
courses/software_engineering_seminar/project/python_backend/src/services/: __init__.py  calculator.py
courses/software_engineering_seminar/project/python_backend/tests/: test_calculator.py  test_calculator_division.py
courses/systems-analysis/project/tennis_assistant/: pyproject.toml
courses/systems-analysis/project/tennis_assistant/tennis_assistant/: text_processing.py
courses/systems-analysis/simulation_2/game_of_life/: pyproject.toml
courses/systems-analysis/simulation_2/game_of_life/src/: main.py
courses/systems-analysis/simulation_2/ml_classic/: Example.ipynb  pyproject.toml
(+579 files in other folders)
