[tool.poetry]
name = "ud-public"
version = "0.1.0"
description = "These are required python packages for courses."
authors = ["Carlos A. Sierra <cavirguezs@udistrital.edu.co>"]
license = "GNU/GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
fastapi = "^0.110.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.28"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
