[tool.poetry]
name = "class-example"
version = "0.1.2"
description = "Dependencies used in this course"
authors = ["casierrav <cavirguezs@udistrital.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
pandas = "^2.2.2"
pydantic = "^2.7.4"
sqlalchemy = "^2.0.31"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
memory-profiler = "^0.61.0"
pipe = "^2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
pylint = "^3.2.3"
pre-commit = "^3.7.1"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
