[project]
name = "deb-breakout"
version = "0.1.0"
description = "THis is a simple game solutioner"
authors = [
    {name = "Prof. Carlos Andres Sierra",email = "cavirguezs@udistrital.edu.co"}
]
license = {text = "GNU/GPL 3.0"}
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
