[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = []

[project]
name = "earthquakes-etl"
version = "0.1.0"
description = "EarthQuakes ETL pipeline — class practice with Apache Airflow"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.9",
    "pandas>=1.5.3,<2.1.0",
    "pyarrow>=12.0.0",
    "apache-airflow-providers-postgres>=5.7.0",
]
