[project]
name = "deb-breakout"
version = "0.1.0"
description = "THis is a simple game solutioner"
authors = [
    {name = "Prof. Carlos Andres Sierra",email = "cavirguezs@udistrital.edu.co"}
]
license = {text = "GNU/GPL 3.0"}
requires-python = ">=3.11"

# ── macOS dependencies ────────────────────────────────────────────────────────
# For Linux (Ubuntu 24.04) use requirements-linux.txt instead.
# Key differences vs Linux:
#   - opencv-python        (macOS has a display server; use opencv-python-headless on Linux)
#   - ale-py==0.10.1       (0.11+ requires gymnasium>=1.1.0 which breaks stable-baselines3)
#   - gymnasium pinned <1.1.0 for stable-baselines3 compatibility
# ─────────────────────────────────────────────────────────────────────────────
dependencies = [
    "numpy<2",
    "torch",
    "stable-baselines3[extra]>=2.3,<3",
    "gymnasium[atari,accept-rom-license]>=0.29.1,<1.1.0",
    "ale-py==0.10.1",
    "autorom[accept-rom-license]",
    "opencv-python==4.8.1.78",
    "tqdm",
    "rich",
    "tensorboard",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
