[project]
name = "backendpython"
version = "0.1.0"
description = "This is a python example of a rest api."
authors = [
    {name = "Carlos Andres Sierra",email = "cavirguezs@udistrital.edu.co"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
black = "^25.1.0"

