[project]
name = "python-backend"
version = "0.1.0"
description = "This is a backend in python to show some simple rest api web services."
authors = [  
    {name = "Carlos Andres Sierra",email = "cavirguezs@udistrital.edu.co"}
]
license = {text = "GNU/GPL 3.0"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pydantic (>=2.12.4,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.121.3,<0.122.0)",
    "pymongo (>=4.15.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "behave (>=1.3.3,<2.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]