[project]
name = "game-of-life"
version = "0.1.0"
description = "This is a simple example of the game of life"
authors = [
    {name = "Andres Sierra",email = "cavirguezs@udistrital.edu.co"}
]
license = {text = "GNU/GPL"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
