[project]
name = "ml-classic"
version = "0.1.0"
description = "This is a simple exercise to apply some classical ml models to a dataset."
authors = [
    {name = "Andres Sierra",email = "cavirguezs@udistrital.edu.co"}
]
license = {text = "GNU/GPL"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "xgboost (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
