[project]
name = "solution"
version = "0.0.1"
description = "This is an example of FastAPI and PostgreSQL integrations."
authors = [
    {name = "Carlos Andres Sierra",email = "cavirguezs@udistrital.edu.co"}
]
license = {text = "GNU/GPL"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
