[tool.poetry]
name = "calculator-sm-ud"
version = "0.1.1"
description = "This is an example of a calculator in python using classes."
authors = ["casierrav <cavirguezs@udistrital.edu.co>"]
license = "GNU/GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.1"
sqlalchemy = "^2.0.34"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
pylint = "^3.2.7"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
